Bug 235600 - Color auto corrections are broken
Summary: Color auto corrections are broken
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Plugin-Editor-AutoColors (other bugs)
Version First Reported In: 1.3.0
Platform: Ubuntu Unspecified
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-04-28 07:48 UTC by Julien Narboux
Modified: 2016-06-29 19:37 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.3.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Narboux 2010-04-28 07:48:33 UTC
Version:           svn 1.3.0 (using KDE 4.3.5)
Installed from:    Ubuntu Packages

The auto corrections of color are broken in current svn, some filter produce something in black and white, ...

I suspect a thread issue.

Julien
Comment 1 Gerhard Kulzer 2010-05-03 02:58:58 UTC
I confirm this bug.
AMD_64 system
KDE 4.4.2
Comment 2 Julien Narboux 2010-05-03 07:28:51 UTC
In the vignetting tool the preview is broken as well, although no code has changed in this tool. 

I suspect this is the same bug, related to a thread issue.

Julien
Comment 3 caulier.gilles 2010-05-03 08:21:59 UTC
If it's relevant of thread issue, this problem is cetainly due to this commit from Marcel :

http://websvn.kde.org/?view=revision&revision=1115277

Note : I cannot reproduce the dysfunction there. It's probably releavant of Qt4 version used in target computer. Which Qt4 version you use exactly ? (me it's 4.5.3)

Gilles Caulier
Comment 4 Julien Narboux 2010-05-03 08:25:08 UTC
I am using 4.5.3 ubuntu package, but I will update soon to 10.4.

Julien
Comment 5 caulier.gilles 2010-05-03 08:35:06 UTC
*** Bug 235864 has been marked as a duplicate of this bug. ***
Comment 6 Jens Mueller 2010-05-03 08:43:16 UTC
I'm already on (k)ubuntu 10.04 and the problem remains.

Jens
Comment 7 Marcel Wiesweg 2010-05-03 17:45:01 UTC
SVN commit 1122328 by mwiesweg:

Initialize the running flag to true.
When it was set to false, the ImageHistogram would do nothing when
executed directly in the current thread (not scheduled to its own thread),
as the image plugins do it: the running flag was false, the histogram null.

BUG: 235600

 M  +2 -1      NEWS  
 M  +1 -1      libs/threads/dynamicthread.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1122328
Comment 8 Von Wallace 2010-05-03 23:47:28 UTC
What does the above mean???

Is it fixed?

I will be more than happy to recomplile and test it.

Von
Comment 9 Von Wallace 2010-05-04 00:20:49 UTC
updating via SVN and compiling to test
Comment 10 Von Wallace 2010-05-04 01:05:08 UTC
Works now!
Comment 11 Gerhard Kulzer 2010-05-05 21:32:38 UTC
Yeah, it works again.

On Tue, May 4, 2010 at 1:05 AM, Von Wallace <vonwallace@yahoo.com> wrote:

> https://bugs.kde.org/show_bug.cgi?id=235600
>
>
>
>
>
> --- Comment #10 from Von Wallace <vonwallace yahoo com>  2010-05-04
> 01:05:08 ---
> Works now!
>
> --
> Configure bugmail: https://bugs.kde.org/userprefs.cgi?tab=email
> ------- You are receiving this mail because: -------
> You are a voter for the bug.
> You are on the CC list for the bug.
>