Initialize the running flag to true. When it was set to false, the ImageHistogram would do nothing when executed directly in the current thread (not scheduled to its own thread), as the image plugins do it: the running flag was false, the histogram null.

BUG: 235600

svn path=/trunk/extragear/graphics/digikam/; revision=1122328